crates/monochange/tests/snapshots/pre_stable_versioning__pre_stable_grouped_major_bump_shifts_group_version.snap
---
source: crates/monochange/tests/pre_stable_versioning.rs
assertion_line: 183
info:
  program: mc
  args:
    - release
    - "--dry-run"
    - "--format"
    - text
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
command `release` completed (dry-run)
version: 0.2.0
released packages: workflow-app, workflow-core
release targets:
- group sdk -> v0.2.0 (tag: true, release: true)
changed files:
- Cargo.toml
- crates/app/Cargo.toml
- crates/core/Cargo.toml

----- stderr -----
