crates/monochange/tests/snapshots/pre_stable_versioning__pre_stable_major_bump_produces_minor_version_in_text_output.snap
---
source: crates/monochange/tests/pre_stable_versioning.rs
assertion_line: 42
info:
  program: mc
  args:
    - release
    - "--dry-run"
    - "--format"
    - text
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
command `release` completed (dry-run)
released packages: workflow-app, workflow-core
release targets:
- package app -> app/v0.1.1 (tag: false, release: false)
- package core -> core/v0.2.0 (tag: false, release: false)
changed files:
- crates/app/Cargo.toml
- crates/core/Cargo.toml

----- stderr -----
