crates/monochange/tests/snapshots/pre_stable_versioning__pre_stable_release_json_scenarios_match_snapshot@pre_stable_minor_json.snap
---
source: crates/monochange/tests/pre_stable_versioning.rs
expression: redacted
---
{
  "changedFiles": [
    "Cargo.toml",
    "crates/app/Cargo.toml",
    "crates/core/Cargo.toml"
  ],
  "changelogs": [],
  "changesets": [
    {
      "context": {
        "capabilities": {
          "actorProfiles": false,
          "commitWebUrls": false,
          "issueComments": false,
          "relatedIssues": false,
          "reviewRequestLookup": false
        },
        "host": null,
        "introduced": null,
        "lastUpdated": null,
        "provider": "generic_git",
        "relatedIssues": []
      },
      "details": null,
      "path": ".changeset/feature.md",
      "summary": "breaking change in core",
      "targets": [
        {
          "bump": "minor",
          "changeType": "minor",
          "evidenceRefs": [],
          "id": "core",
          "kind": "package",
          "origin": "direct-change"
        }
      ]
    }
  ],
  "command": "release",
  "deletedChangesets": [],
  "dryRun": true,
  "groupVersion": null,
  "packagePublications": [
    {
      "ecosystem": "cargo",
      "mode": "builtin",
      "package": "app",
      "registry": "crates_io",
      "trustedPublishing": {
        "enabled": true,
        "environment": null,
        "repository": null,
        "workflow": null
      },
      "version": "0.1.1"
    },
    {
      "ecosystem": "cargo",
      "mode": "builtin",
      "package": "core",
      "registry": "crates_io",
      "trustedPublishing": {
        "enabled": true,
        "environment": null,
        "repository": null,
        "workflow": null
      },
      "version": "0.1.1"
    }
  ],
  "plan": {
    "compatibilityEvidence": [],
    "decisions": [
      {
        "bump": "patch",
        "package": "cargo:crates/app/Cargo.toml",
        "plannedVersion": "0.1.1",
        "reasons": [
          "depends on `cargo:crates/core/Cargo.toml`"
        ],
        "trigger": "transitive-dependency",
        "upstreamSources": [
          "cargo:crates/core/Cargo.toml"
        ]
      },
      {
        "bump": "minor",
        "package": "cargo:crates/core/Cargo.toml",
        "plannedVersion": "0.1.1",
        "reasons": [
          "breaking change in core"
        ],
        "trigger": "direct-change",
        "upstreamSources": [
          "cargo:crates/core/Cargo.toml"
        ]
      }
    ],
    "groups": [],
    "unresolvedItems": [],
    "warnings": [],
    "workspaceRoot": "."
  },
  "releaseRecordPath": "[ROOT]/.monochange/releases/[SHA]/release.json",
  "releaseTargets": [
    {
      "id": "app",
      "kind": "package",
      "members": [
        "app"
      ],
      "release": false,
      "renderedChangelogTitle": "app 0.1.1 ([DATE])",
      "renderedTitle": "app 0.1.1 ([DATE])",
      "tag": false,
      "tagName": "app/v0.1.1",
      "version": "0.1.1",
      "versionFormat": "namespaced"
    },
    {
      "id": "core",
      "kind": "package",
      "members": [
        "core"
      ],
      "release": false,
      "renderedChangelogTitle": "core 0.1.1 ([DATE])",
      "renderedTitle": "core 0.1.1 ([DATE])",
      "tag": false,
      "tagName": "core/v0.1.1",
      "version": "0.1.1",
      "versionFormat": "namespaced"
    }
  ],
  "releasedPackages": [
    "workflow-app",
    "workflow-core"
  ],
  "version": "0.1.1"
}
