crates/monochange/tests/snapshots/pre_stable_versioning__pre_stable_release_text_scenarios_match_snapshot@stable_major_text.snap
---
source: crates/monochange/tests/pre_stable_versioning.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
command `release` completed (dry-run)
released packages: workflow-app, workflow-core
release targets:
- package app -> app/v1.0.1 (tag: false, release: false)
- package core -> core/v2.0.0 (tag: false, release: false)
release manifest: .monochange/release-manifest.json
changed files:
- crates/app/Cargo.toml
- crates/core/Cargo.toml
